apps/prod/lms/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lms
  annotations:
    # argocd.argoproj.io/sync-wave: "-1"
    argocd.argoproj.io/hook: PreSync
