apps/prod/lms/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: lms-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:MGewWNUlQpm72azrQSFot5F8esYs2Wa8Q9OwcQ==,iv:+APZ9QMDiNVGyDrOm02KE96AhK5EL0kwYrU7T62UT/c=,tag:DHmLfV+M2WFmeAo/4vbhtQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:9qkpEl70eKtYkUi0XXVxyIaxgdlLpWudSLT/5Q==,iv:YJFGfrcQgPCRdnGzM4eRZCCuAkfkJvR9JReyIU/dLCI=,tag:QUHavgCDeZCODUrbrbW0Yw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTc09HMEFWeHpYVWtUUFFD
[...]
            OMGy0fE7sL08FwJRR8tmCXE27mmyC68la4ouWj/sSTriUwkhSpHDPw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T12:01:53Z"
    mac: ENC[AES256_GCM,data:L4VmI/rc117QLSsn239bPCXIB8y70fa4OZ6PmLxf55Pi+bpfqMcPrJ+XPikCgCvu2ly15Rl9r2Goc+5YLci++xeWaSe6JRnlsIHhjs0CRuF8J7PZIsfCHspgRjms5BQyQCZLZsYROo8WpUa0gXw4AkZQJknO4DO+x+1ZayyVk7k=,iv:PTvC24E3LTDfyaodA915T8GDxWxCQmaOIkgqvOuKD6o=,tag:aY2AkoavZIvk0lvMKu3U/w==,type:str]
    pgp:
        - created_at: "2024-06-22T20:23:04Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8C0u19tMYmqcn5WqZ9IIubogZ+p2TCDjkp+wWPg4JEonr
[...]
            =hyHf
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
