apps/prod/lms/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: lms.media.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:6nE37Fcx90XBe/fr5fC7yUwbaHUnUpAF4TgYsg==,iv:ynDAecnymdIX24cBvF2Y3g6w0B2p55cHi8UVGIsOab8=,tag:wM9q3pnFyOQgMpYYf+CC+Q==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ETgygsEz/Hj5tciBwIjL2sCaxLMvRvHH,iv:8fJTlGk8g0HrSTw1sObNylClgZpzEMCvjlgcWs8OwIs=,tag:txByi8SItJsZDs3K6oabig==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: lms
    namespace: lms
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:GCVRhNLL3oJr4gfZ1ute2s2NZlmm+tGQD5IDUvkQX/46QHKg,iv:nmjENwSqMFXCBCdz6KlmgjznEOMIzQBzRH+fin9mfJA=,tag:Lt1LayRe4pxiRc+z8S9e0Q==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: lms
              namespace: lms
    tls:
        domains:
            - main: ENC[AES256_GCM,data:tNQ3ob6K7FlybTVWht9LCpCurrX5gXSa,iv:sS2Yt3jSMQD1XeZI5G8BZJ9mXrqFsepv087sYcW3Ems=,tag:tn6rdhJf3t6u3RU/HABOrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:BaKKygksZbOMVaDxvWaiingiyr53G0C7qA==,iv:8PPNjbar1je6hU3GncoYLWx25KWmrjKvNEJxEB/vj/0=,tag:Wv8cFxUYWGyO7QFPGa1sWw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: lms-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T14:23:55Z"
    mac: ENC[AES256_GCM,data:oEH99ydY62zLEm/gjDSLe4+C6k8B/Nfs3m+eXofSBrPPPLuj/gYV+JVIYlXiXa+vC+IN0En/KleLQEnTd7EK9xnJGUXmldjQScyQ+gwUW+P9/23KbpusVD5ZcipH0EEqh6WJufgWT2pLekogxZGUTlHT0IfSmKIkmUXwliv90c4=,iv:kaMF3plT5jrbJod2R8uERma2Qh4X//MEPaccLe2fphQ=,tag:bW3lows/SEKUtKL5iDtmlA==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
